# memenow-storage-service

./: .gitignore  Cargo.toml  README.md  clippy.toml  rustfmt.toml
.cargo/: config.toml
src/: config.rs  error.rs  main.rs
src/api/: mod.rs  upload.rs
src/domain/: mod.rs  services.rs
src/infrastructure/: ipfs.rs  mod.rs  s3.rs
src/utils/: file.rs  mod.rs
