[package]
name = "memenow-storage-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3.30"
warp = "0.3.7"
aws-sdk-s3 = "1.36.0"
aws-config = "1.5.1"
ipfs-api = "0.17.0"
dotenv = "0.15.0"
tokio-util = "0.7.11"
uuid = { version = "1.8.0", features = ["v4"] }
log = "0.4.21"
serde_json = "1.0.117"
futures-util = "0.3.30"
bytes = "1.6.0"
anyhow = "1.0.86"